log hours input field container alignment issue fixed

--- a/app/assets/stylesheets/calendar.scss
+++ b/app/assets/stylesheets/calendar.scss
@@ -16,12 +16,12 @@
     #calendar{ padding-top: 5%; width: 90%;float: right}
     #calendar_form{clear: both}
     #form_week_main{margin-top: 5%}
-    .small_field input {text-align: center; width: 100px}
+    .small_field input {text-align: center; width: 87%}
     #hours_div{width: 100%;}
    // #hours_div_inner{width: 90%;float:right;overflow: hidden;}
     #hours_div_inner{width: 90%; overflow: hidden;margin-left: 83px;}
     #hours_label{width:10%}
-    #hours_div .small_field {width: 108px; float: left}
+    #hours_div .small_field {width: 14.287%; float: left}
     .fc-day-content{ height: 40px}
 
 //    .fc-view-container{width: 100%}
